src/test/deca/context/valid/homeMade/tests/test329_condition1.deca
// test valide de la règle 3.29


{
    if (false) {
        ;
    }
    else if (7==7.5) {
        ;
    }
    else if ("toto" == 7) {
        ;
    }
}